--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^4.5.6",
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "lightweight-charts": "^3.1.5",
     "module": "^1.2.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
